# Haoma

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
backend/: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/scripts/: precompute_demo.sh  setup.sh  train.sh
backend/src/haoma/: __init__.py  config.py  schemas.py
backend/src/haoma/api/: __init__.py  adapters.py  main.py  server.py
backend/src/haoma/core/: __init__.py  loinc.py  seed.py
backend/src/haoma/demo/: __init__.py  orchestrator.py
backend/src/haoma/demo/scenarios/: stable_to_degradation.json
backend/src/haoma/features/: __init__.py  engine.py
backend/src/haoma/model/: __init__.py  inference.py  loss.py  pinn.py  train.py
backend/src/haoma/simulator/: __init__.py  patient.py  physiology.py  scenarios.py
backend/src/haoma/xai/: __init__.py  precompute.py
backend/tests/: test_api_adapters.py  test_features.py  test_integration.py  test_pinn.py  test_simulator.py  test_smoke.py  test_xai.py
docs/plans/: 2026-04-18-global-critical-alert-banner.md
vite/: .env.example  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
vite/scripts/: check-no-mocks.sh
vite/src/: App.tsx  index.css
vite/src/components/: BackendUnreachableBanner.tsx  Clock.tsx  CriticalAlertBar.tsx  ErrorBoundary.tsx  Glyph.tsx  Logo.tsx  SeverityTag.tsx  Toggles.tsx  TopBar.tsx
vite/src/components/patient/: ConnectionChip.tsx  ContributingFactors.tsx  DivergenceBanner.tsx  FeaturesPanel.tsx  PatientCard.tsx  PatientErrorPanel.tsx  PatientHeader.tsx  PatientLoader.tsx  PhysicsPanel.tsx  PhysioTrace.tsx  ScoreBanner.tsx  ScoreTimeline.tsx  TimelineSection.tsx  VitalCard.tsx  VitalDetailModal.tsx  VitalsGrid.tsx  WhyBand.tsx
vite/src/components/ward/: PatientCard.tsx
vite/src/hooks/: useAlertSound.ts  useAudio.ts  useCriticalPatients.ts  useHealthProbe.ts  useNightMode.ts
vite/src/lib/: api.ts  audio.ts  auth-stub.ts  clinical.ts  mocks.ts
vite/src/pages/: Landing.tsx  Login.tsx  Patient.tsx  Ward.tsx
vite/src/types/: api.ts  ui.ts
