[project]
name = "haoma"
version = "0.1.0"
description = "Physics-Informed Neural Network for pediatric microvascular collapse detection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Haoma Team" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "websockets>=13,<14",
    "pydantic>=2.9,<3.0",
    "numpy>=1.26,<2.2",
    "scipy>=1.14,<2.0",
    "pandas>=2.2,<3.0",
    "torch>=2.5,<3.0",
    "shap>=0.46,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.8,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haoma"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
