[project]
name = "haoma"
version = "0.1.0"
description = "Physics-Informed Neural Network for pediatric microvascular collapse detection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Haoma Team" }]

# torch is installed separately via scripts/setup.sh (CPU-only wheel, ~180 MB),
# to avoid pip pulling the default CUDA wheel (~2.5 GB).
dependencies = [
    "numpy>=1.24,<2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "websockets>=11.0",
    "pydantic>=2.0",
    "shap>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.8,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haoma"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
